--- a/ProyectoDataScieneI.ipynb
+++ b/ProyectoDataScieneI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPE5JaCxEf7MqShEv8lWg5y",
+      "authorship_tag": "ABX9TyP4W+ER+rfWm/daKLWKHl77",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1553,6 +1553,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El peso efectivo representa el mayor valor entre el peso real y el peso volumétrico, y es el que se usa para facturación, por eso es tan importante.\n",
+        "\n",
+        "La mayoría de los paquetes facturados están en un rango medio (entre 3 y 12 kg), lo cual puede ser una señal de:\n",
+        "\n",
+        "Un patrón de clientes que envían paquetes medianos.\n",
+        "\n",
+        "Reglas de empaque o restricciones de envío que inducen a ese rango.\n",
+        "\n",
+        "Una posible política comercial que desalienta paquetes muy ligeros o muy pesados."
+      ],
+      "metadata": {
+        "id": "I1u-A21jTX2z"
+      }
     },
     {
       "cell_type": "code",
