--- a/ProyectoDataScieneI.ipynb
+++ b/ProyectoDataScieneI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzLO3nidC8cH0qsdI7pcuN",
+      "authorship_tag": "ABX9TyPqBEybKjC1AneE6bK0WWWJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,87 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Servicio de Encomienda"
+      ],
+      "metadata": {
+        "id": "mKGLioK6jWtM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Este conjunto de datos captura el flujo de metagramas de extremo a extremo, cubriendo los detalles del remitente/receptor, el peso, el modo de entrega, los cargos y el estado, lo que lo convierte en un recurso valioso para la analítica, el aprendizaje automático y la investigación logística."
+      ],
+      "metadata": {
+        "id": "9rYUfZisjcqc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Descripción de columnas\n",
+        "\n",
+        "    Origen: La ciudad desde la que se reservó originalmente o despachó la parcela.\n",
+        "    Destino: La ciudad donde se pretende entregar la parcela.\n",
+        "    Pouch No: Un identificador interno único (a menudo UUID) utilizado para agrupar envíos en logística.\n",
+        "    Fecha: La fecha en que se reservaba el envío, representado en formato número serie de Excel.\n",
+        "    Nombre del remitente: Nombre completo de la persona o empresa que envía el paquete.\n",
+        "    Sender Phone: Número de contacto móvil o fijo del remitente.\n",
+        "    Dirección del remitente: Dirección completa del remitente para la recogida y los registros.\n",
+        "    Ciudad remitente: La ciudad del remitente puede duplicar el campo \"Origen\".\n",
+        "    Sender State: El estado indio en el que se encuentra el remitente.\n",
+        "    Sender Pincode: El código postal de 6 dígitos (ZIP) de la ubicación del remitente.\n",
+        "    Sender GSTIN: GST Número de identificación del remitente (si procede en los envíos comerciales).\n",
+        "    Piezas totales: Número de paquetes físicos individuales incluidos en el envío.\n",
+        "    Wt Actual: El peso físico real (en kilogramos) de los paquetes.\n",
+        "    Wt volumétrico: El peso calculado sobre la base de las dimensiones de volumen, utilizado para los fines de facturación.\n",
+        "    Efectivo: El peso utilizado para la facturación -normalmente el mayor de peso real o volumétrico.\n",
+        "    Papeleo: Indica si se presentó papeleo junto con el paquete (Sí/No).\n",
+        "    Firma del remitente: Denota si el remitente firmó la documentación de despacho (Sí/No).\n",
+        "    Fecha del remitente: La fecha en que el remitente completó los documentos de entrega o firmados, en formato serie Excel.\n",
+        "    Nombre del destinatario: El nombre completo de la persona u organización pretendía recibir el paquete.\n",
+        "    Teléfono de Recipiente: El número de contacto del destinatario previsto.\n",
+        "    Dirección de destino: La dirección de entrega completa donde debe enviarse el paquete.\n",
+        "    Ciudad Destinatario: La ciudad del destinatario puede duplicar el campo \"Destino\".\n",
+        "    Estado receptor: El estado indio donde reside el receptor.\n",
+        "    Receptor Pincode: El código postal o ZIP de 6 dígitos de la dirección de entrega.\n",
+        "    Descripción: Una breve descripción textual del contenido del paquete (por ejemplo, documentos, elementos).\n",
+        "    Servicios Valor Agregado: Servicios opcionales añadidos al envío, como manipulación frágil, entrega exprés, seguros, etc.\n",
+        "    Envío No: El número de seguimiento oficial de DTDC asignado al envío.\n",
+        "    Fecha de caducidad: la última fecha válida para la entrega, después de la cual el envío puede expirar o ser devuelto. Almacenado como número de serie de Excel.\n",
+        "    Código de reserva: El código único que identifica la sucursal de DTDC o contador de reservas.\n",
+        "    Interceptor GSTIN: Número de identificación GST del destinatario (si procede).\n",
+        "    Nombre del receptor: Un campo alternativo o duplicado para el nombre del destinatario.\n",
+        "    Relación: Describe la relación del receptor con el destinatario original (por ejemplo, uno mismo, Personal, Familia).\n",
+        "    Estampilla de la empresa: Indica si se utilizó un sello de la empresa durante el recibo (Sí/No).\n",
+        "    Firma del receptor: Indica si el destinatario firmó la confirmación de entrega (Sí/No).\n",
+        "    Fecha de recepción: La fecha en que se recibió el paquete, en formato serie de Excel.\n",
+        "    Tarifa: La carga de entrega de la base en rupias indias.\n",
+        "    Cargos por VAS: Cargos adicionales por cualquier servicio de valor agregado aplicado al envío.\n",
+        "    Cantidad total: El importe total facturado para el envío, incluyendo tarifas y complementos.\n",
+        "    Modo: El modo de envío elegido . Superficie, aire o Express.\n",
+        "    Recargo de riesgo: Denota quién asume la responsabilidad de riesgo - el propietario (enferr) o Carrier (DTDC).\n",
+        "    Modo de Pago: El método de pago utilizado en la reserva, como Efectivo, Tarjeta, UPI, Wallet, etc.\n",
+        "    Naturaleza de la administración: Indica el tipo de paquete de paquetería \"Dox\" para documentos o \"No-Dox\" para mercancías/mercancías.\n"
+      ],
+      "metadata": {
+        "id": "5iisOV4Jjg_J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Carga de datos"
+      ],
+      "metadata": {
+        "id": "4Jux1Hfij6y3"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "bSuN8gkcFUYZ"
       },
@@ -52,7 +131,7 @@
       "metadata": {
         "id": "YJO3mPHj-8vV"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +151,7 @@
         "response = requests.get(url)  # Hace una solicitud GET para obtener el contenido del archivo\n",
         "print(response.text[:300])  # Imprime los primeros 300 caracteres del archivo para ver cómo está delimitado"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +177,7 @@
         "id": "DBKarGLRECsY",
         "outputId": "0bc774f4-2686-4283-e91e-c146f85066ac"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +629,7 @@
         "id": "xrDevTq0HHUJ",
         "outputId": "18f21d5a-8a12-46f9-f06a-14b1dd0ed567"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -968,7 +1047,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -994,7 +1073,7 @@
         "id": "qwwmZOvyj6rc",
         "outputId": "51a6aa77-19bd-4781-c8e8-b6182b3615cc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,7 +1145,7 @@
         "id": "1XlGk8FQHS9M",
         "outputId": "889de049-7016-457c-8913-e6faecd0406c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1329,7 +1408,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1391,7 +1470,7 @@
       "metadata": {
         "id": "cgAmKCEhFX7s"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1410,7 +1489,7 @@
       "metadata": {
         "id": "zD1QEnCQ8en4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1424,7 +1503,7 @@
       "metadata": {
         "id": "BHjKmBYlo11q"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1445,7 +1524,7 @@
         "id": "e-q7O65Ff10R",
         "outputId": "281267f3-d0e5-4ecb-c829-e16af4ed73ac"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1524,7 +1603,7 @@
         "id": "qtKLG_KChUJw",
         "outputId": "4e1fc353-5896-4e9b-bbfe-240297ce251c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1611,7 +1690,7 @@
           "height": 573
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2363,6 +2442,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Hipotesis\n",
+        "\n",
+        "1.  **Relación entre Peso y Costo**\n",
+        "\n",
+        "Hipótesis nula (H₀): No hay relación significativa entre el peso del paquete (Actual Wt, Volumetric Wt) y el costo total (Total Amount).\n",
+        "\n",
+        "Hipótesis alternativa (H₁): A mayor peso (real o volumétrico), mayor costo de envío.\n",
+        "\n",
+        "2. **Impacto del Tipo de Envío (Mode)**\n",
+        "\n",
+        "H₀: El tipo de envío (Express, Surface, Air Cargo) no afecta el costo.\n",
+        "\n",
+        "H₁: Los envíos Express o Air Cargo son más costosos que los Surface.\n",
+        "\n",
+        "\n",
+        "3. **Servicios Adicionales (Value Added Services)**\n",
+        "\n",
+        "H₀: Servicios como COD (Contra Reembolso) o Insurance no influyen en el costo.\n",
+        "\n",
+        "H₁: Los envíos con servicios adicionales tienen un costo significativamente mayor.\n",
+        "\n",
+        "\n",
+        "4. **Número de Piezas (Total Pieces)**\n",
+        "\n",
+        "H₀: El número de piezas no impacta en el precio.\n",
+        "\n",
+        "H₁: Envíos con más piezas son más costosos.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DSih2XkmifCo"
+      }
     }
   ]
 }
