--- a/ProyectoDataScieneI.ipynb
+++ b/ProyectoDataScieneI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQu3HFqBoPev7urmy/T8PZ",
+      "authorship_tag": "ABX9TyPUcZ/pEiuXdSPNWUYUcWTl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Este conjunto de datos captura el flujo de metagramas de extremo a extremo, cubriendo los detalles del remitente/receptor, el peso, el modo de entrega, los cargos y el estado, lo que lo convierte en un recurso valioso para la analítica, el aprendizaje automático y la investigación logística."
+        "Este conjunto de datos captura el flujo de metagramas de extremo a extremo, cubriendo los detalles del remitente/receptor, el peso, el modo de entrega, los cargos y el estado."
       ],
       "metadata": {
         "id": "9rYUfZisjcqc"
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "bSuN8gkcFUYZ"
       },
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "YJO3mPHj-8vV"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "response = requests.get(url)  # Hace una solicitud GET para obtener el contenido del archivo\n",
         "print(response.text[:300])  # Imprime los primeros 300 caracteres del archivo para ver cómo está delimitado"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "id": "DBKarGLRECsY",
         "outputId": "8063de8f-db5d-4ec8-d8f1-873c91cfe7f8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -680,7 +680,7 @@
         "id": "xrDevTq0HHUJ",
         "outputId": "afe198fa-28ad-46a7-9dc2-697990da1731"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1098,7 +1098,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1124,7 +1124,7 @@
         "id": "qwwmZOvyj6rc",
         "outputId": "7c17df68-8aa3-4597-be85-cfdc5ae98860"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,7 +1196,7 @@
         "id": "1XlGk8FQHS9M",
         "outputId": "a85e9925-2972-47fb-cdf8-0098a7eb509c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1459,7 +1459,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,7 +1540,7 @@
         "id": "qtKLG_KChUJw",
         "outputId": "97eada25-7377-48c8-fa01-192f779216fd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1597,7 +1597,7 @@
         "id": "l3tqeT81i3KA",
         "outputId": "ac4d3f2d-c5b2-4fac-8776-3babab95dd9b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1648,7 +1648,7 @@
           "height": 573
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
