--- a/ProyectoDataScieneI.ipynb
+++ b/ProyectoDataScieneI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUcZ/pEiuXdSPNWUYUcWTl",
+      "authorship_tag": "ABX9TyP+KXcHO4jkgsi8ujWICeyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Servicio de Encomienda"
+        "## Análisis del Servicio de Encomienda"
       ],
       "metadata": {
         "id": "mKGLioK6jWtM"
@@ -38,7 +38,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Este conjunto de datos captura el flujo de metagramas de extremo a extremo, cubriendo los detalles del remitente/receptor, el peso, el modo de entrega, los cargos y el estado."
+        "Este dataset registra el flujo completo de envíos de extremo a extremo. Incluye información sobre remitente y destinatario, peso real y volumétrico, modalidad de entrega (Express, Surface, Air Cargo), cargos aplicados (tarifa base, recargos, peso facturable) y estado del envío.\n",
+        "\n",
+        "El objetivo de esta notebook es explorar el comportamiento logístico del servicio, detectar posibles outliers, evaluar patrones de entrega y construir modelos predictivos que ayuden a optimizar costos y tiempos de operación."
       ],
       "metadata": {
         "id": "9rYUfZisjcqc"
