--- a/ProyectoDataScieneI.ipynb
+++ b/ProyectoDataScieneI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYMfgRaid5CwnSH0UJpSZb",
+      "authorship_tag": "ABX9TyPr36gBoD0PTCBDXwNk5Gs5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2396,11 +2396,29 @@
       "source": [
         "# Hipótesis\n",
         "\n",
-        "**Modelo multivariable**\n",
+        "1. **Influencia del peso facturable**\n",
         "\n",
-        " **Hipótesis nula (H₀):** Ninguna de las variables independientes (peso, piezas, modo, recargos) tiene efecto significativo sobre el monto total.\n",
+        "**Hipótesis nula** (H₀): El peso facturable (Chargeable Wt) no tiene un efecto significativo sobre el monto total (Total Amount).\n",
         "\n",
-        " **Hipótesis alternativa (H₁):** Al menos una de las variables independientes tiene efecto significativo sobre el monto total.\n",
+        "**Hipótesis alternativa** (H₁): El peso facturable sí tiene un efecto significativo sobre el monto total.\n",
+        "\n",
+        "2. **Diferencias por modo de envío**\n",
+        "\n",
+        "**Hipótesis nula** (H₀): El modo de envío (Mode) no influye en el monto total facturado.\n",
+        "\n",
+        "**Hipótesis alternativa** (H₁): El modo de envío sí influye en el monto total facturado.\n",
+        "\n",
+        "3. **Valor agregado y cargos adicionales**\n",
+        "\n",
+        "**Hipótesis nula** (H₀): Los cargos por servicios adicionales (VAS Charges) no afectan significativamente el monto total.\n",
+        "\n",
+        "**Hipótesis alternativa** (H₁): Los cargos por servicios adicionales sí afectan significativamente el monto total.\n",
+        "\n",
+        "4. **Modelo multivariable**\n",
+        "\n",
+        "**Hipótesis nula (H₀):** Ninguna de las variables independientes (peso, piezas, modo, recargos) tiene efecto significativo sobre el monto total.\n",
+        "\n",
+        "**Hipótesis alternativa (H₁):** Al menos una de las variables independientes tiene efecto significativo sobre el monto total.\n",
         "\n"
       ],
       "metadata": {
