--- a/ProyectoDataScieneI.ipynb
+++ b/ProyectoDataScieneI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPr36gBoD0PTCBDXwNk5Gs5",
+      "authorship_tag": "ABX9TyPAeo5mYVDk6WU6Wrqcc7kV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1559,11 +1559,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Interpretación grafico de histogramas**\n",
-        "\n",
-        "**Objetivo**\n",
-        "\n",
-        "Visualizar cómo se distribuyen los costos totales (Total Amount) en función de su frecuencia (Count).\n",
+        "El objetivo de esta visualizacion es ver cómo se distribuyen los costos totales (Total Amount) en función de su frecuencia (Count).\n",
         "\n",
         "**Patrones observables:**\n",
         "\n",
@@ -1575,9 +1571,7 @@
         "\n",
         "Pocos casos con montos totales altos (ej. cerca de 1400) o frecuencias elevadas.\n",
         "\n",
-        "**Conclusión:**\n",
-        "\n",
-        "La distribución es asimétrica (sesgada hacia la izquierda), común en datos financieros donde la mayoría de los costos son bajos, pero unos pocos son significativamente altos.\n"
+        "Como conclusion podemos decir que la distribución es asimétrica (sesgada hacia la izquierda), común en datos financieros donde la mayoría de los costos son bajos, pero unos pocos son significativamente altos.\n"
       ],
       "metadata": {
         "id": "rIfUt6XjovPz"
